--- a/css/main.css
+++ b/css/main.css
@@ -1132,7 +1132,7 @@ img {
   display: block;
 }
 
-.portfolio-link:focus {
+.portfolio-link:focus, .portfolio-link:hover {
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
