--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -29,7 +29,8 @@
 .portfolio-link {
   display: block;
 
-  &:focus {
+  &:focus,
+  &:hover {
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   }
 }
