--- a/css/main.css
+++ b/css/main.css
@@ -284,8 +284,10 @@ img {
   }
 }
 
-.navigation-list-item:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 768px) {
+  .navigation-list-item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .navigation-list-link {
@@ -1238,7 +1240,7 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  overflow-y: scroll;
+  overflow: scroll;
 }
 
 .backdrop.is-hidden {
