--- a/sass/components/_menu-navigation.scss
+++ b/sass/components/_menu-navigation.scss
@@ -20,9 +20,10 @@
       margin-bottom: 34px;
     }
   }
-
-  &:not(:last-child) {
-    margin-right: 50px;
+  @media screen and (min-width: 768px) {
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
   }
 }
 
