Change font size

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import "./components/logo";
 @import "./components/button";
 @import "./layout/page-header";
+@import "./components/mobile-menu";
 @import "./components/menu-navigation";
 @import "./components/menu-contacts";
 @import "./layout/hero";
