--- a/css/main.css
+++ b/css/main.css
@@ -165,23 +165,36 @@ img {
   border-bottom: 1px solid #ececec;
 }
 
-.navigation {
+.header-inner {
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
   min-height: 60px;
 }
 
 @media screen and (min-width: 768px) {
-  .navigation {
-    justify-content: start;
+  .header-inner {
+    justify-content: space-between;
     min-height: 80px;
   }
 }
 
+.navigation {
+  display: flex;
+  align-items: center;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header-logo {
+    display: inline-flex;
+    margin-right: 88px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
-  .navigation {
-    justify-content: space-between;
+  .header-logo {
+    display: inline-flex;
+    margin-right: 93px;
   }
 }
 
@@ -195,7 +208,6 @@ img {
   padding: 0;
   border: none;
   background-color: transparent;
-  z-index: 10;
 }
 
 @media screen and (min-width: 768px) {
@@ -204,177 +216,104 @@ img {
   }
 }
 
-.menu-button .icon-cross {
-  display: none;
+.icon-menu {
+  fill: #212121;
 }
 
-.menu-button.is-open .icon-cross {
-  display: block;
-}
-
-.menu-button:focus .icon-cross,
-.menu-button:hover .icon-cross {
-  fill: #2196f3;
-}
-
-.menu-button.is-open .icon-menu {
-  display: none;
-}
-
-.menu-button:focus .icon-menu,
-.menu-button:hover .icon-menu {
+.menu-button:focus .icon-menu {
   fill: #2196f3;
 }
 
 @media screen and (max-width: 767px) {
-  .menu-container {
-    display: none;
-    position: absolute;
+  .mobile-menu {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     top: 0;
     left: 0;
     width: 100%;
     height: 100vh;
     padding: 48px 40px;
-    z-index: 5;
     background-color: #ffffff;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transform: scale(0);
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    z-index: 5;
   }
-  .menu-container.is-open {
-    display: block;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .menu-container {
-    display: flex;
-    margin-left: 88px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .menu-container {
-    display: flex;
-    margin-left: 93px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .navigation-list {
-    margin-bottom: 302px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .navigation-list {
-    display: flex;
-    margin-right: 84px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .navigation-list {
-    display: flex;
-    margin-right: 305px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .navigation-list-item:not(:last-child) {
-    margin-bottom: 34px;
+  .mobile-menu.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    transform: scale(1);
   }
 }
 
 @media screen and (min-width: 768px) {
-  .navigation-list-item:not(:last-child) {
-    margin-right: 50px;
+  .mobile {
+    display: none;
   }
 }
 
-.navigation-list-link {
+.menu-close-button {
+  position: absolute;
   display: block;
+  top: 10px;
+  right: 15px;
+  padding: 0;
+  margin: 0;
+  width: 40px;
+  height: 40px;
+  border: none;
+  background-color: transparent;
+}
+
+.icon-cross {
+  fill: #212121;
+}
+
+.menu-close-button:focus .icon-cross {
+  fill: #2196f3;
+}
+
+.mobile-nav-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-nav-link {
+  display: block;
+  font-size: 32px;
   font-weight: 500;
-  font-size: 40px;
   line-height: 1.175;
   letter-spacing: 0.02em;
   color: #212121;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 768px) {
-  .navigation-list-link {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.143;
-  }
-}
-
-.navigation-list-link:hover, .navigation-list-link:focus {
+.mobile-nav-link.link-current {
   color: #2196f3;
 }
 
-.navigation-list-link.link-current {
-  position: relative;
-  color: #2196f3;
-}
-
-@media screen and (min-width: 768px) {
-  .navigation-list-link.link-current:after {
-    position: absolute;
-    content: "";
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: #2196f3;
+@media screen and (min-width: 480px) {
+  .mobile-nav-link {
+    font-size: 40px;
   }
 }
 
-@media screen and (max-width: 767px) {
-  .contact-list {
-    margin-bottom: 64px;
-  }
+.mobile-contact-list {
+  margin-top: auto;
+  margin-bottom: 64px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .contact-list {
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: center;
-  }
+.mobile-contact-item:not(:last-child) {
+  margin-bottom: 32px;
 }
 
-@media screen and (min-width: 1200px) {
-  .contact-list {
-    display: flex;
-    flex-direction: row-reverse;
-    margin-left: auto;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .contact-list-item:not(:last-child) {
-    margin-bottom: 32px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .contact-list-item:last-child {
-    margin-bottom: 10px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .contact-list-item:last-child {
-    margin-right: 30px;
-  }
-}
-
-.contact-list-link-tel {
+.mobile-contact-tel {
   display: inline-flex;
-  font-size: 30px;
+  font-size: 26px;
   font-weight: 500;
   line-height: 1.176;
   letter-spacing: 0.02em;
@@ -382,88 +321,23 @@ img {
 }
 
 @media screen and (min-width: 480px) {
-  .contact-list-link-tel {
+  .mobile-contact-tel {
     font-size: 34px;
   }
 }
 
-@media screen and (min-width: 768px) {
-  .contact-list-link-tel {
-    font-size: 12px;
-    line-height: 1.167;
-    color: #757575;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .contact-list-link-tel:hover, .contact-list-link-tel:focus {
-    color: #2196f3;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .contact-list-link-tel {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    align-self: baseline;
-    font-size: 14px;
-    line-height: 1.143;
-  }
-}
-
-.contact-list-link-mail {
+.mobile-contact-mail {
   display: inline-flex;
+  font-size: 16px;
   font-weight: 500;
-  font-size: 24px;
   line-height: 1.167;
   letter-spacing: 0.02em;
   color: #757575;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-list-link-mail:hover, .contact-list-link-mail:focus {
-  color: #2196f3;
-}
-
-@media screen and (min-width: 768px) {
-  .contact-list-link-mail {
-    font-size: 12px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .contact-list-link-mail {
-    padding-top: 32px;
-    padding-bottom: 32px;
-    align-self: baseline;
-    font-size: 14px;
-    line-height: 1.143;
-  }
-}
-
-.contact-list-icon {
-  margin-right: 8px;
-  fill: #757575;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media screen and (max-width: 767px) {
-  .contact-list-icon {
-    display: none;
-  }
-}
-
-.contact-list-link-tel:hover .contact-list-icon,
-.contact-list-link-tel:focus .contact-list-icon {
-  fill: #2196f3;
-}
-
-.contact-list-link-mail:hover .contact-list-icon,
-.contact-list-link-mail:focus .contact-list-icon {
-  fill: #2196f3;
-}
-
-@media screen and (min-width: 1200px) {
-  .contact-list-icon {
-    margin-right: 10px;
+@media screen and (min-width: 480px) {
+  .mobile-contact-mail {
+    font-size: 24px;
   }
 }
 
@@ -493,7 +367,7 @@ img {
 .socials-menu-link {
   position: relative;
   display: inline-block;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 500;
   line-height: 1.22;
   letter-spacing: 0.02em;
@@ -503,6 +377,171 @@ img {
 @media screen and (min-width: 480px) {
   .socials-menu-link {
     font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .navigation-list {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .navigation-list {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .navigation-list {
+    display: flex;
+  }
+}
+
+.navigation-list-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.navigation-list-link {
+  display: inline-flex;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.143;
+  color: #212121;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-list-link:hover, .navigation-list-link:focus {
+  color: #2196f3;
+}
+
+.navigation-list-link.link-current {
+  position: relative;
+  color: #2196f3;
+}
+
+.navigation-list-link.link-current:after {
+  position: absolute;
+  content: "";
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #2196f3;
+}
+
+@media screen and (max-width: 767px) {
+  .contact-list {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact-list {
+    display: flex;
+    margin-left: auto;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact-list-item:last-child {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact-list-item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+.contact-list-link {
+  display: inline-flex;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.167;
+  letter-spacing: 0.02em;
+  color: #757575;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-list-link:hover, .contact-list-link:focus {
+  color: #2196f3;
+}
+
+@media screen and (min-width: 1200px) {
+  .contact-list-link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    align-self: baseline;
+    font-size: 14px;
+    line-height: 1.143;
+  }
+}
+
+.contact-list-icon-mail {
+  width: 14px;
+  height: 10px;
+  margin-right: 8px;
+  fill: #757575;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 767px) {
+  .contact-list-icon-mail {
+    display: none;
+  }
+}
+
+.contact-list-link:hover .contact-list-icon-mail,
+.contact-list-link:focus .contact-list-icon-mail {
+  fill: #2196f3;
+}
+
+@media screen and (min-width: 1200px) {
+  .contact-list-icon-mail {
+    width: 16px;
+    height: 12px;
+    margin-right: 10px;
+  }
+}
+
+.contact-list-icon-tel {
+  margin-right: 8px;
+  width: 10px;
+  height: 14px;
+  margin-right: 8px;
+  fill: #757575;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 767px) {
+  .contact-list-icon-tel {
+    display: none;
+  }
+}
+
+.contact-list-link:hover .contact-list-icon-tel,
+.contact-list-link:focus .contact-list-icon-tel {
+  fill: #2196f3;
+}
+
+@media screen and (min-width: 1200px) {
+  .contact-list-icon-tel {
+    width: 10px;
+    height: 16px;
+    margin-right: 10px;
   }
 }
 
@@ -561,11 +600,17 @@ img {
   margin-top: 0;
   margin-bottom: 30px;
   font-weight: 900;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
+}
+
+@media screen and (min-width: 480px) {
+  .hero-title {
+    font-size: 26px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -1171,11 +1216,32 @@ img {
   margin: 0;
   top: 0;
   left: 0;
-  padding: 77px 24px;
+  padding: 10px 24px;
   font-size: 18px;
   line-height: 1.56;
   color: #ffffff;
   opacity: 0;
+}
+
+.portfolio-link:hover .portfolio-card-overlay-text,
+.portfolio-link:focus .portfolio-card-overlay-text {
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .portfolio-card-overlay-text {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .portfolio-card-overlay-text {
+    padding-top: 74px;
+    padding-bottom: 74px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -1194,12 +1260,6 @@ img {
     padding-left: 24px;
     padding-right: 24px;
   }
-}
-
-.portfolio-link:hover .portfolio-card-overlay-text,
-.portfolio-link:focus .portfolio-card-overlay-text {
-  opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-card-content {
@@ -1240,7 +1300,10 @@ img {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  overflow: scroll;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -1250,21 +1313,25 @@ img {
 
 .modal {
   position: absolute;
-  max-width: 450px;
-  width: 100%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  max-width: 450px;
+  width: 100%;
+  height: 90%;
+  max-height: 609px;
   padding: 40px;
+  overflow: scroll;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  z-index: 15;
 }
 
 @media screen and (min-width: 1200px) {
   .modal {
     max-width: 528px;
+    max-height: 581px;
+    height: 100%;
   }
 }
 
