--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -69,11 +69,31 @@
   margin: 0;
   top: 0;
   left: 0;
-  padding: 77px 24px;
+  padding: 10px 24px;
 
-  // @media screen and (max-width: 767px) {
-  //   padding: 77px 24px;
-  // }
+  font-size: 18px;
+  line-height: 1.56;
+
+  color: $primary-white-color;
+
+  opacity: 0;
+
+  .portfolio-link:hover &,
+  .portfolio-link:focus & {
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  @media screen and (min-width: 320px) and (max-width: 479px) {
+    font-size: 16px;
+  }
+
+  @media screen and (min-width: 480px) {
+    padding-top: 74px;
+    padding-bottom: 74px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
 
   @media screen and (min-width: 768px) {
     padding-top: 49px;
@@ -87,19 +107,6 @@
     padding-bottom: 63px;
     padding-left: 24px;
     padding-right: 24px;
-  }
-
-  font-size: 18px;
-  line-height: 1.56;
-
-  color: $primary-white-color;
-
-  opacity: 0;
-
-  .portfolio-link:hover &,
-  .portfolio-link:focus & {
-    opacity: 1;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 
