--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,7 +6,12 @@
   height: 100%;
 
   background-color: rgba(0, 0, 0, 0.2);
-  overflow: scroll;
+  // overflow: scroll;
+
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -16,22 +21,25 @@
 
 .modal {
   position: absolute;
-  max-width: 450px;
-  width: 100%;
-
-  @media screen and (min-width: 1200px) {
-    max-width: 528px;
-  }
-
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  max-width: 450px;
+  width: 100%;
+  height: 90%;
+  max-height: 609px;
   padding: 40px;
+  overflow: scroll;
 
   background-color: $primary-white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  z-index: 15;
+
+  @media screen and (min-width: 1200px) {
+    max-width: 528px;
+    max-height: 581px;
+    height: 100%;
+  }
 }
 
 .modal-close-btn {
