--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -66,12 +66,16 @@
   margin-bottom: 30px;
 
   font-weight: 900;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.62;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 
   color: $primary-white-color;
+
+  @media screen and (min-width: 480px) {
+    font-size: 26px;
+  }
 
   @media screen and (min-width: 1200px) {
     font-size: 44px;
