--- a/sass/components/_menu-navigation.scss
+++ b/sass/components/_menu-navigation.scss
@@ -1,31 +1,48 @@
 .navigation-list {
   @media screen and (max-width: 767px) {
-    display: none;
+    margin-bottom: 302px;
   }
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;
+    margin-right: 84px;
   }
 
   @media screen and (min-width: 1200px) {
     display: flex;
+    margin-right: 305px;
   }
 }
 
 .navigation-list-item {
-  &:not(:last-child) {
-    margin-right: 50px;
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 34px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
   }
 }
 
 .navigation-list-link {
-  display: inline-flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
-
+  display: block;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.143;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.143;
+  }
+
   color: $additional-text-color;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -39,16 +56,18 @@
   position: relative;
   color: $accent-color;
 
-  &:after {
-    position: absolute;
-    content: "";
-    bottom: 0;
-    left: 0;
+  @media screen and (min-width: 768px) {
+    &:after {
+      position: absolute;
+      content: "";
+      bottom: 0;
+      left: 0;
 
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
+      width: 100%;
+      height: 4px;
+      border-radius: 2px;
 
-    background-color: $accent-color;
+      background-color: $accent-color;
+    }
   }
 }
