--- a/sass/layout/_page-footer.scss
+++ b/sass/layout/_page-footer.scss
@@ -93,6 +93,13 @@
 .socials-list {
   display: flex;
   justify-content: center;
+
+  // .social-box & {
+  //   @media screen and (max-width: 767px) {
+  //     margin-left: auto;
+  //     margin-right: auto;
+  //   }
+  // }
 }
 
 .socials-item {
