--- a/sass/layout/_page-header.scss
+++ b/sass/layout/_page-header.scss
@@ -3,23 +3,34 @@
   border-bottom: 1px solid $header-bottom-border;
 }
 
-.navigation {
+.header-inner {
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
   min-height: 60px;
 
   @media screen and (min-width: 768px) {
-    justify-content: start;
-    min-height: 80px;
-  }
-
-  @media screen and (min-width: 1200px) {
     justify-content: space-between;
+    min-height: 80px;
   }
 }
 
+.navigation {
+  display: flex;
+  align-items: center;
+}
+
 .header-logo {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: inline-flex;
+    margin-right: 88px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: inline-flex;
+    margin-right: 93px;
+  }
+
   & span {
     color: $additional-text-color;
   }
@@ -30,7 +41,7 @@
     display: none;
   }
 
-  display: inline-flex;
+  display: inline-block;
   margin-left: auto;
   padding: 0;
   border: none;
@@ -54,41 +65,49 @@
 }
 
 .icon-menu {
-  .menu-button.is-open & {
-    display: none;
-  }
+  fill: $additional-text-color;
 
-  .menu-button:focus &,
-  .menu-button:hover & {
+  .menu-button:focus & {
     fill: $accent-color;
   }
 }
 
-.menu-container {
-  @media screen and (max-width: 767px) {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    padding: 48px 40px;
-    z-index: 5;
-    background-color: $primary-white-color;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+// .icon-menu {
+//   .menu-button.is-open & {
+//     display: none;
+//   }
 
-    &.is-open {
-      display: block;
-    }
-  }
+//   .menu-button:focus &,
+//   .menu-button:hover & {
+//     fill: $accent-color;
+//   }
+// }
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    display: flex;
-    margin-left: 88px;
-  }
+// .menu-container {
+//   @media screen and (max-width: 767px) {
+//     display: none;
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100vh;
+//     padding: 48px 40px;
+//     z-index: 5;
+//     background-color: $primary-white-color;
+//     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
 
-  @media screen and (min-width: 1200px) {
-    display: flex;
-    margin-left: 93px;
-  }
-}
+//     &.is-open {
+//       display: block;
+//     }
+//   }
+
+//   @media screen and (min-width: 768px) and (max-width: 1199px) {
+//     display: flex;
+//     margin-left: 88px;
+//   }
+
+//   @media screen and (min-width: 1200px) {
+//     display: flex;
+//     margin-left: 93px;
+//   }
+// }
