--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -29,7 +29,7 @@
   height: 90%;
   max-height: 609px;
   padding: 40px;
-  // overflow: scroll;
+  z-index: 15;
 
   background-color: $primary-white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
