--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -67,12 +67,15 @@
 .portfolio-card-overlay-text {
   position: absolute;
   margin: 0;
-  top: 0;
-  left: 0;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 24px;
-  padding-right: 24px;
+  top: 50%;
+  left: 24px;
+  transform: translate(0, -50%);
+  // top: 0;
+  // left: 0;
+  // padding-top: 10px;
+  // padding-bottom: 10px;
+  // padding-left: 24px;
+  // padding-right: 24px;
 
   font-size: 18px;
   line-height: 1.56;
@@ -94,22 +97,22 @@
   @media screen and (min-width: 480px) {
     padding-top: 77px;
     padding-bottom: 77px;
-    padding-left: 24px;
-    padding-right: 24px;
+    // padding-left: 24px;
+    // padding-right: 24px;
   }
 
   @media screen and (min-width: 768px) {
     padding-top: 49px;
     padding-bottom: 49px;
-    padding-left: 24px;
-    padding-right: 24px;
+    // padding-left: 24px;
+    // padding-right: 24px;
   }
 
   @media screen and (min-width: 1200px) {
     padding-top: 63px;
     padding-bottom: 63px;
-    padding-left: 24px;
-    padding-right: 24px;
+    // padding-left: 24px;
+    // padding-right: 24px;
   }
 }
 
