Changed paddings with absolute positioning

--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -69,6 +69,7 @@
   margin: 0;
   top: 50%;
   left: 24px;
+  right: 24px;
   transform: translate(0, -50%);
   // top: 0;
   // left: 0;
@@ -94,26 +95,26 @@
     font-size: 16px;
   }
 
-  @media screen and (min-width: 480px) {
-    padding-top: 77px;
-    padding-bottom: 77px;
-    // padding-left: 24px;
-    // padding-right: 24px;
-  }
+  // @media screen and (min-width: 480px) {
+  //   padding-top: 77px;
+  //   padding-bottom: 77px;
+  //   // padding-left: 24px;
+  //   // padding-right: 24px;
+  // }
 
-  @media screen and (min-width: 768px) {
-    padding-top: 49px;
-    padding-bottom: 49px;
-    // padding-left: 24px;
-    // padding-right: 24px;
-  }
+  // @media screen and (min-width: 768px) {
+  //   padding-top: 49px;
+  //   padding-bottom: 49px;
+  //   // padding-left: 24px;
+  //   // padding-right: 24px;
+  // }
 
-  @media screen and (min-width: 1200px) {
-    padding-top: 63px;
-    padding-bottom: 63px;
-    // padding-left: 24px;
-    // padding-right: 24px;
-  }
+  // @media screen and (min-width: 1200px) {
+  //   padding-top: 63px;
+  //   padding-bottom: 63px;
+  //   // padding-left: 24px;
+  //   // padding-right: 24px;
+  // }
 }
 
 .portfolio-card-content {
