--- a/css/main.css
+++ b/css/main.css
@@ -1229,6 +1229,7 @@ img {
   margin: 0;
   top: 50%;
   left: 24px;
+  right: 24px;
   transform: translate(0, -50%);
   font-size: 18px;
   line-height: 1.56;
@@ -1245,27 +1246,6 @@ img {
 @media screen and (min-width: 320px) and (max-width: 479px) {
   .portfolio-card-overlay-text {
     font-size: 16px;
-  }
-}
-
-@media screen and (min-width: 480px) {
-  .portfolio-card-overlay-text {
-    padding-top: 77px;
-    padding-bottom: 77px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .portfolio-card-overlay-text {
-    padding-top: 49px;
-    padding-bottom: 49px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .portfolio-card-overlay-text {
-    padding-top: 63px;
-    padding-bottom: 63px;
   }
 }
 
